remove weather forecast data

--- a/CS/BlazorDashboardApp/Server/BlazorDashboardApp.Server.csproj
+++ b/CS/BlazorDashboardApp/Server/BlazorDashboardApp.Server.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <Folder Include="App_Data\Dashboards\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
