--- a/CS/BlazorDashboardApp/Server/BlazorDashboardApp.Server.csproj
+++ b/CS/BlazorDashboardApp/Server/BlazorDashboardApp.Server.csproj
@@ -1,18 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="DevExpress.AspNetCore.Dashboard" Version="21.2.2-beta" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.4" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.4" />
+    <PackageReference Include="DevExpress.AspNetCore.Dashboard" Version="21.2.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.5" />
   </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Client\BlazorDashboardApp.Client.csproj" />
     <ProjectReference Include="..\Shared\BlazorDashboardApp.Shared.csproj" />
   </ItemGroup>
+
   <ItemGroup>
-    <Folder Include="App_Data\Dashboards\" />
-    <Folder Include="Controllers\" />
+    <Folder Include="Data\Dashboards\" />
   </ItemGroup>
+
+
 </Project>
