--- a/CS/BlazorDashboardApp/Client/BlazorDashboardApp.Client.csproj
+++ b/CS/BlazorDashboardApp/Client/BlazorDashboardApp.Client.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DevExpress.Blazor.Dashboard" Version="22.1.2-beta" />
+    <PackageReference Include="DevExpress.Blazor.Dashboard" Version="22.1.*" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.5" PrivateAssets="all" />
   </ItemGroup>
