--- a/CS/BlazorDashboardApp/Server/BlazorDashboardApp.Server.csproj
+++ b/CS/BlazorDashboardApp/Server/BlazorDashboardApp.Server.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DevExpress.AspNetCore.Dashboard" Version="22.1.2-beta" />
+    <PackageReference Include="DevExpress.AspNetCore.Dashboard" Version="22.1.*" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.5" />
   </ItemGroup>
