--- a/CS/BlazorDashboardApp/Server/BlazorDashboardApp.Server.csproj
+++ b/CS/BlazorDashboardApp/Server/BlazorDashboardApp.Server.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DevExpress.AspNetCore.Dashboard" Version="22.2.*" />
+    <PackageReference Include="DevExpress.AspNetCore.Dashboard" Version="22.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.5" />
   </ItemGroup>
@@ -23,3 +23,4 @@
 
 
 </Project>
+
